--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"dev": "ts-node-dev ./src/index.ts",
 		"build": "tsc",
 		"serve": "node ./dist/src/index.js",
-		"start": "npm run build & npm run serve"
+		"start": "npm run build & npm run serve",
+		"commands": "ts-node-dev ./src/utils/registerCommands.ts"
 	},
 	"repository": {
 		"type": "git",
