--- a/package.json
+++ b/package.json
@@ -22,10 +22,17 @@
 	},
 	"homepage": "https://github.com/andleo17/bot-server-cristiano#readme",
 	"dependencies": {
+		"@discordjs/opus": "^0.5.3",
+		"@discordjs/voice": "^0.7.5",
+		"discord-ytdl-core": "^5.0.4",
 		"discord.js": "^13.3.1",
-		"dotenv": "^10.0.0"
+		"dotenv": "^10.0.0",
+		"sodium": "^3.0.2",
+		"yt-search": "^2.10.2",
+		"ytdl-core": "^4.9.2"
 	},
 	"devDependencies": {
+		"@types/yt-search": "^2.3.2",
 		"ts-node-dev": "^1.1.8",
 		"typescript": "^4.5.4"
 	}
