adding lyrics to music

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"discord-ytdl-core": "^5.0.4",
 		"discord.js": "^13.3.1",
 		"dotenv": "^10.0.0",
+		"genius-lyrics-api": "^3.2.0",
 		"sodium": "^3.0.2",
 		"yt-search": "^2.10.2",
 		"ytdl-core": "^4.9.2"
