--- a/package.json
+++ b/package.json
@@ -36,5 +36,9 @@
 		"@types/yt-search": "^2.3.2",
 		"ts-node-dev": "^1.1.8",
 		"typescript": "^4.5.4"
+	},
+	"engines": {
+		"node": "16.x",
+		"npm": "8.x"
 	}
 }
