--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"dev": "ts-node-dev ./src/index.ts",
 		"build": "tsc",
 		"serve": "node ./dist/src/index.js",
-		"start": "npm run build & npm run serve",
+		"start": "npm run build && npm run serve",
 		"commands": "ts-node-dev ./src/utils/registerCommands.ts"
 	},
 	"repository": {
@@ -36,5 +36,9 @@
 		"@types/yt-search": "^2.3.2",
 		"ts-node-dev": "^1.1.8",
 		"typescript": "^4.5.4"
+	},
+	"engines": {
+		"node": "16.x",
+		"npm": "8.x"
 	}
 }
