--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	"dependencies": {
 		"@discordjs/opus": "^0.5.3",
 		"@discordjs/voice": "^0.7.5",
+		"@prisma/client": "^3.7.0",
 		"discord-ytdl-core": "^5.0.4",
 		"discord.js": "^13.3.1",
 		"dotenv": "^10.0.0",
@@ -34,6 +35,7 @@
 	},
 	"devDependencies": {
 		"@types/yt-search": "^2.3.2",
+		"prisma": "^3.7.0",
 		"ts-node-dev": "^1.1.8",
 		"typescript": "^4.5.4"
 	},
