--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@discordjs/opus": "^0.5.3",
 		"@discordjs/voice": "^0.7.5",
 		"@prisma/client": "^3.7.0",
+		"axios": "^0.24.0",
 		"discord-ytdl-core": "^5.0.4",
 		"discord.js": "^13.3.1",
 		"dotenv": "^10.0.0",
