--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"dev": "ts-node-dev ./src/index.ts",
 		"tsc": "tsc",
 		"start": "node ./dist/index.js",
-		"commands": "ts-node-dev ./src/utils/registerCommands.ts",
+		"commands": "ts-node ./src/utils/registerCommands.ts",
 		"postinstall": "npm run tsc"
 	},
 	"repository": {
@@ -37,6 +37,7 @@
 	"devDependencies": {
 		"@types/yt-search": "^2.3.2",
 		"prisma": "^3.7.0",
+		"ts-node": "^10.4.0",
 		"ts-node-dev": "^1.1.8",
 		"typescript": "^4.5.4"
 	},
