--- a/package.json
+++ b/package.json
@@ -23,20 +23,19 @@
 	},
 	"homepage": "https://github.com/andleo17/bot-server-cristiano#readme",
 	"dependencies": {
-		"@discordjs/opus": "^0.5.3",
+		"@discordjs/opus": "^0.7.0",
 		"@discordjs/voice": "^0.7.5",
 		"@prisma/client": "^3.7.0",
 		"axios": "^0.24.0",
-		"discord-ytdl-core": "^5.0.4",
-		"discord.js": "^13.3.1",
+		"discord.js": "^13.4.0",
+		"distube": "^3.0.4",
 		"dotenv": "^10.0.0",
+		"ffmpeg-static": "^4.4.0",
 		"genius-lyrics-api": "^3.2.0",
-		"sodium": "^3.0.2",
-		"yt-search": "^2.10.2",
+		"libsodium-wrappers": "^0.7.9",
 		"ytdl-core": "^4.9.2"
 	},
 	"devDependencies": {
-		"@types/yt-search": "^2.3.2",
 		"prisma": "^3.7.0",
 		"ts-node": "^10.4.0",
 		"ts-node-dev": "^1.1.8",
